#
# Generated using Pamux CMakeBasedCppWizard
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(SOURCE_FILES
)

SET(HEADER_FILES
)

add_subdirectory(english-strings)
add_subdirectory(fileFormats)
add_subdirectory(gui-designs)
add_subdirectory(internals)
add_subdirectory(localized-strings)
add_subdirectory(public_api)
add_subdirectory(public_schemas)
